# IMOGI-POS

./: .flake8  .gitignore  .npmrc  .pre-commit-config.yaml  ADMIN_ACCESS_FIX_SUMMARY.md  ANALYSIS_SUMMARY.md  API_AUTHORIZATION_AUDIT.md  API_IMPLEMENTATION_SUMMARY.md  API_SESSION_HANDLING_FIX.md  ARCHITECTURE.md  AUDIT_CONSISTENCY_CHECK.md  AUDIT_NATIVE_POS_FIX_JAN2026.md  AUDIT_SUMMARY.md  AUTHORIZATION_AUDIT_REPORT.md  AUTHORIZATION_DEVELOPMENT_GUIDE.md  AUTHORIZATION_FIX_SUMMARY.md  AUTHORIZATION_REFACTOR_REPORT.md  BACK_BUTTON_AUTO_RELOAD.md  BRANCH_CONFIG_FIX.md  BRANCH_SETUP_QUICKFIX.md  CASHIER_API_FIXES_SUMMARY.md  CASHIER_APPS_OVERVIEW.md  CASHIER_CONSOLE_FLOW_ANALYSIS.md  CASHIER_CONSOLE_MODE_FIX.md  CASHIER_CONSOLE_QUICKREF.md  CASHIER_CONSOLE_REACT_IMPLEMENTATION.md  CASHIER_QUICKREF.md  CASHIER_REACT_COMPLETE.md  CASHIER_WAITER_UX_AUDIT.md  CATALOG_FIX_DEPLOYMENT.md  CENTRALIZATION_REFACTOR_COMPLETE.md  CENTRALIZED_MODULES_ARCHITECTURE.md  CHANGELOG.md  CHANGES_REFERENCE.md  CLEANUP_AUDIT.md  CLEANUP_EXECUTION_COMPLETE.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_ANALYSIS.md  COMPREHENSIVE_TESTING_SCHEMA.md  COUNTER_MODE_DEFINITION.md  (+161 more)
docs/: AUTHORIZATION_IMPROVEMENTS.md  CUSTOMER_FIELDS_SIMPLIFICATION.md  MULTI_DOMAIN_STRATEGY.md
fixtures/: print_format_kiosk_queue.json  print_format_kiosk_receipt.json  print_format_self_order_qr_sheet.json
frappe/: __init__.py
imogi_pos/: __init__.py  hooks.py  install.py  modules.txt  patches.txt
imogi_pos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
repo-root/: IMOGI_POS_CHECKLIST.md
tests/: README.md  (+44 more)
(+1106 files in other folders)
