[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imogi_pos"
dynamic = ["version"]
description = "Point of Sale system for ERPNext"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "IMOGI", email = "info@imogi.tech"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "frappe>=15.0.0",
    "erpnext>=15.0.0",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
packages = ["imogi_pos"]

[tool.setuptools.dynamic]
version = {attr = "imogi_pos.__version__"}

[tool.setuptools.package-data]
imogi_pos = ["**/*"]
